# ax-npu-kit-650

./: CMakeLists.txt  LICENSE  README.md  VERSION  build_mc50.sh  download_ax_bsp.sh  download_third_party.sh
cmake/: msp_dependencies.cmake
demo/: hvcfp_demo.cpp
docs/: api.md  compile.md  flowchart.md  pipeline.md
inc/: ax_skel_api.h  ax_skel_err.h  ax_skel_type.h
models/: ax_ax650_hvcfp_algo_model_V1.0.2.axmodel
src/api/: ax_skel_api.cpp  ax_skel_def.h  ax_skel_version.h  ax_skel_version.h.in
src/inference/: cv_types.h  detection.hpp  engine_env.hpp  engine_wrapper.cpp  engine_wrapper.hpp
src/inference/detector/: yolox.hpp
src/mgr/: mem_mgr.h  model_mgr.cpp  model_mgr.h  ppl_mgr.cpp  ppl_mgr.h
src/pipeline/: ax_skel_pipeline.cpp  ax_skel_pipeline.h
src/pipeline/hvcfp/: HVCFPDetector.h  pipeline_hvcfp.cpp  pipeline_hvcfp.h  tracker_dealer.cpp  tracker_dealer.h
src/tracker/: byteTracker.cpp  byteTracker.hpp  dataType.hpp  kalmanFilter.cpp  kalmanFilter.hpp  lapjv.cpp  lapjv.hpp  track.cpp  track.hpp  trackUtils.cpp
src/utils/: checker.h  config_util.h  frame_queue.h  frame_utils.hpp  io.hpp  jenc.cpp  jenc.h  logger.h  singleton.h  timeout_queue.h
tests/: ax_skel_getcap.cpp  ax_skel_version.cpp  test_utils.h
toolchains/: aarch64-none-linux-gnu.toolchain.cmake
